--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,8 @@
 </head>
 <body>
 <div class="container">
+{% include "nav_bar.html" %}
+
     {% block home-marquee %}
         <h2> HOME-MARQUEE </h2>
     {% endblock %}
