rendered basic signup page

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,10 +17,10 @@
     <title>Habit Builder</title>
 </head>
 <body>
-<div class="container">
 {% include "nav_bar.html" %}
 
-    {% block home-marquee %}
+<div class="container">
+    {% block content %}
         <h2> HOME-MARQUEE </h2>
     {% endblock %}
 </div>
