--- a/templates/dashboard/home.html
+++ b/templates/dashboard/home.html
@@ -1,6 +1,6 @@
-{% extends "../base.html" %}
+{% extends "base.html" %}
 {% load static %}
-{% block home-marquee %}
+{% block content %}
     <div class="row">
         <h1>Habit Builder</h1>
     </div>
