basic signup and signin

--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
     <div class="row text-center">
-        <h1 class="text-center">Motivate yourself to achieve your goals.</h1>
+        <h1 class="text-center">Successfully signed in as {{ user }}</h1>
     </div>
     <br/>
 
