--- a/templates/dashboard/signin.html
+++ b/templates/dashboard/signin.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h2>Sign up</h2>
+  <h2>Sign in</h2>
   <form method="post" action=".">{% csrf_token %}
     {% for field in form %}
       <div class="form-group">
@@ -15,6 +15,6 @@
         {% endfor %}
       </div>
     {% endfor %}
-    <button type="submit" class="btn btn-primary">Sign up</button>
+    <button type="submit" class="btn btn-primary">Sign in</button>
   </form>
 {% endblock %}
