--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -1,23 +1,35 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-    <a class="navbar-brand" href="#">Habit Builder</a>
-    <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-        {% if user.is_active %}
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
-              </li>
-        {% else %}
-          <li class="nav-item {% if active_link == 'signin' %} active {% endif %}">
-            <a class="nav-link" href="{% url 'signin' %}">Sign In</a>
-          </li>
-          <li class="nav-item {% if active_link == 'signup' %} active {% endif %}">
-            <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
-          </li>
-        {% endif %}
-    </ul>
-    {
-  </div>
+    <button class="navbar-toggler" type="button" data-toggle="collapse"
+            data-target="#navbarTogglerDemo01"
+            aria-controls="navbarTogglerDemo01" aria-expanded="false"
+            aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+        <a class="navbar-brand" href="#">Habit Builder</a>
+        <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+            {% if user.is_active %}
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#"
+                       id="navbarDropdown" role="button" data-toggle="dropdown"
+                       aria-haspopup="true" aria-expanded="false">
+                        Hi, {{ user.username |title }}
+                    </a>
+                    <div class="dropdown-menu"
+                         aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="{% url 'logout' %}">Log
+                            Out</a>
+                    </div>
+                </li>
+            {% else %}
+                <li class="nav-item {% if active_link == 'signin' %} active {% endif %}">
+                    <a class="nav-link" href="{% url 'signin' %}">Sign In</a>
+                </li>
+                <li class="nav-item {% if active_link == 'signup' %} active {% endif %}">
+                    <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
+                </li>
+            {% endif %}
+        </ul>
+        {
+    </div>
 </nav>
