--- a/templates/habit/add_habit.html
+++ b/templates/habit/add_habit.html
@@ -7,7 +7,7 @@
         </button>
     </div>
     <div class="modal-body">
-        <p>something</p>
+        <p>{{ form.as_p }}</p>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-secondary"
