--- a/templates/habit/add_habit.html
+++ b/templates/habit/add_habit.html
@@ -7,10 +7,66 @@
         </button>
     </div>
     <div class="modal-body">
-        <p>{{ form.as_p }}</p>
+        <div class="col-sm-6 offset-sm-3 align-items-center">
+            <form method="post" action=".">{% csrf_token %}
+                <div class="form-group">
+                    <label for="{{ form.habit.id_for_label }}"
+                           class="bmd-label-floating">Habit</label>
+                    {{ form.habit }}
+                    {% if form.habit.help_text %}
+                        <small class="form-text text-muted">{{ form.habit.help_text|safe }}</small>
+                    {% endif %}
+                </div>
+                <div class="form-group">
+                    <label for="{{ form.habit_type.id_for_label }}"
+                           class="bmd-label-floating">Habit Type</label>
+                    {{ form.habit_type }}
+                    {% if form.habit_type.help_text %}
+                        <small class="form-text text-muted">{{ form.habit_type.help_text|safe }}</small>
+                    {% endif %}
+                </div>
+                <div class="form-group">
+                    <label for="{{ form.hourly_interval.id_for_label }}"
+                           class="bmd-label-floating">Interval In Hours</label>
+                    {{ form.hourly_interval }}
+                    {% if form.hourly_interval.help_text %}
+                        <small class="form-text text-muted">{{ form.hourly_interval.help_text|safe }}</small>
+                    {% endif %}
+                </div>
+                <div class="form-group">
+                    <label for="{{ form.habit_time.id_for_label }}"
+                           class="bmd-label-floating">Daily Habit To Be Done
+                        At</label>
+                    <div class="input-group date" id="datetimepicker3"
+                         data-target-input="nearest">
+                        {{ form.habit_time }}
+                        {# <input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker3"/>#}
+                        <div class="input-group-append"
+                             data-target="#datetimepicker3"
+                             data-toggle="datetimepicker">
+                            <div class="input-group-text">Now</div>
+                        </div>
+                    </div>
+
+                    {% if form.habit_time.help_text %}
+                        <small class="form-text text-muted">{{ form.habit_time.help_text|safe }}</small>
+                    {% endif %}
+                </div>
+
+                <div class="form-group">
+                    <label for="{{ form.week_day.id_for_label }}"
+                           class="bmd-label-floating">Select Weekdays For
+                        Weekly Habit</label>
+                    {{ form.week_day }}
+                    {% if form.week_day.help_text %}
+                        <small class="form-text text-muted">{{ form.week_day.help_text|safe }}</small>
+                    {% endif %}
+                </div>
+            </form>
+        </div>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-secondary"
+        <button type="submit" class="btn btn-secondary"
                 data-dismiss="modal">Close
         </button>
         <button type="button" class="btn btn-primary">Save
@@ -18,3 +74,22 @@
         </button>
     </div>
 </div>
+<style>
+    .bootstrap-datetimepicker-widget {
+        z-index: 1600 !important;
+    }
+</style>
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('#datetimepicker3').datetimepicker({
+            format: 'LT'
+        });
+    });
+    {#$(function () {#}
+    {#    $('#datetimepicker3').datetimepicker({#}
+    {#        format: 'LT'#}
+    {#    });#}
+    {#})
+    ;
+    #}
+</script>
