--- a/templates/habit/add_habit.html
+++ b/templates/habit/add_habit.html
@@ -33,21 +33,11 @@
                         <small class="form-text text-muted">{{ form.hourly_interval.help_text|safe }}</small>
                     {% endif %}
                 </div>
-                <div class="form-group">
+                <div class="form-group" id="datepicker-container">
                     <label for="{{ form.habit_time.id_for_label }}"
                            class="bmd-label-floating">Daily Habit To Be Done
                         At</label>
-                    <div class="input-group date" id="datetimepicker3"
-                         data-target-input="nearest">
                         {{ form.habit_time }}
-                        {# <input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker3"/>#}
-                        <div class="input-group-append"
-                             data-target="#datetimepicker3"
-                             data-toggle="datetimepicker">
-                            <div class="input-group-text">Now</div>
-                        </div>
-                    </div>
-
                     {% if form.habit_time.help_text %}
                         <small class="form-text text-muted">{{ form.habit_time.help_text|safe }}</small>
                     {% endif %}
@@ -75,21 +65,20 @@
     </div>
 </div>
 <style>
+    ul {
+  list-style-type: none;
+}
+
     .bootstrap-datetimepicker-widget {
         z-index: 1600 !important;
     }
 </style>
 <script type="text/javascript">
     $(document).ready(function () {
-        $('#datetimepicker3').datetimepicker({
-            format: 'LT'
-        });
+        $('#id_habit_time').datetimepicker({
+            viewMode: 'days',
+            format: 'HH:mm'
+        }).css({'z-index': '20000 !important'});
     });
-    {#$(function () {#}
-    {#    $('#datetimepicker3').datetimepicker({#}
-    {#        format: 'LT'#}
-    {#    });#}
-    {#})
-    ;
-    #}
+
 </script>
