--- a/templates/habit/list_habit.html
+++ b/templates/habit/list_habit.html
@@ -71,6 +71,6 @@
     <script>
         var ADD_HABIT = "{% url 'add_habit' %}";
     </script>
-    <script type="text/javascript" src="{% static 'js/habit.js' %} "></script>
+    <script type="text/javascript" src="{% static 'js/habit.js?v=1.1' %} "></script>
 
 {% endblock %}
