--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -18,8 +18,21 @@
         </div>
     {% endif %}
     <div class="row text-center">
-        <h1 class="text-center">Successfully signed in as {{ user }}</h1>
+        <h1 class="text-center">Welcome {{ user }}</h1>
     </div>
-    <br/>
+    <div class="text-center">
+        {% if rewards %}
+            <h1>Rewards earned so far</h1>
+            {% for reward in rewards %}
+                {% if reward.badge == '1' %}
+                    <h2>Bronze Badge <span class="badge badge-warning">{{ reward.badge__count }} </span> </h2>
+                {% elif reward.badge == '2' %}
+                    <h2>Silver Badge <span class="badge badge-secondary">{{ reward.badge__count }} </span></h2>
+                {% elif reward.badge == '3' %}
+                    <h2>Golden Badge <span class="badge badge-danger">{{ reward.badge__count }} </span></h2>
+                {% endif %}
+            {% endfor %}
+        {% endif %}
+    </div>
 
 {% endblock %}
