implementing facebook sharing

--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,26 @@
     </head>
     <body>
         {% include "nav_bar.html" %}
+        {# fb #}
+        <script>
+              window.fbAsyncInit = function() {
+                FB.init({
+                  appId            : '280319942773367',
+                  autoLogAppEvents : true,
+                  xfbml            : true,
+                  version          : 'v3.1'
+                });
+              };
+
+              (function(d, s, id){
+                 var js, fjs = d.getElementsByTagName(s)[0];
+                 if (d.getElementById(id)) {return;}
+                 js = d.createElement(s); js.id = id;
+                 js.src = "https://connect.facebook.net/en_US/sdk.js";
+                 fjs.parentNode.insertBefore(js, fjs);
+               }(document, 'script', 'facebook-jssdk'));
+            </script>
+
         <div class="container">
             {% block content %}
                 <h2> HOME-MARQUEE </h2>
